--- a/src/styles/materialize.config.scss
+++ b/src/styles/materialize.config.scss
@@ -33,8 +33,6 @@ $roboto-font-path: "~materialize-css/fonts/roboto/";
 @import "~materialize-css/sass/components/navbar";
 @import "~materialize-css/sass/components/preloader";
 @import "~vue-materialize/sass/forms";
-@import "~materialize-css/sass/components/forms/checkboxes";
-@import "~materialize-css/sass/components/forms/radio-buttons";
 
 // css for js modules
 // activate only what you need
@@ -45,16 +43,11 @@ $roboto-font-path: "~materialize-css/fonts/roboto/";
 @import "~materialize-css/sass/components/collapsible";
 @import "~materialize-css/sass/components/table_of_contents"; // scrollspy
 @import "~materialize-css/sass/components/forms/input-fields";
+// ----- no js but need to be after input-fields
+@import "~materialize-css/sass/components/forms/checkboxes";
+@import "~materialize-css/sass/components/forms/radio-buttons";
+// -----
 @import "~materialize-css/sass/components/forms/switches";
+@import "~materialize-css/sass/components/forms/select"; // need to be after input-fields
 @import "~materialize-css/sass/components/toast";
 @import "~materialize-css/sass/components/tooltip";
-
-// NOT implemented yet:
-// @import "~materialize-css/sass/components/tabs";
-// @import "~materialize-css/sass/components/slider";
-// @import "~materialize-css/sass/components/date_picker/default";
-// @import "~materialize-css/sass/components/date_picker/default.date";
-// @import "~materialize-css/sass/components/date_picker/default.time";
-// @import "~materialize-css/sass/components/forms/select";
-// @import "~materialize-css/sass/components/forms/file-input";
-// @import "~materialize-css/sass/components/forms/range";
